force-app/main/default/objects/Beat__c/Beat__c.object-meta.xml
<CustomObject>
    <label>Beat</label>
    <pluralLabel>Beats</pluralLabel>
    <nameField>
        <label>Beat Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Beat/route definition for sales territory coverage planning (MOD-02 Beat Plan and Route Management)</description>
</CustomObject>