force-app/main/default/objects/Beat__c/fields/Beat_Code__c.field-meta.xml
<CustomField>
    <fullName>Beat_Code__c</fullName>
    <label>Beat Code</label>
    <type>Text</type>
    <length>50</length>
    <unique>true</unique>
    <externalId>true</externalId>
</CustomField>