force-app/main/default/objects/Beat__c/fields/Beat_Day__c.field-meta.xml
<CustomField>
    <fullName>Beat_Day__c</fullName>
    <description>DEPRECATED: Use Day_of_Week__c instead. This field is kept for backward compatibility and is auto-synced from Day_of_Week__c by the Beat trigger.</description>
    <label>Beat Day</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monday</fullName>
            </value>
            <value>
                <fullName>Tuesday</fullName>
            </value>
            <value>
                <fullName>Wednesday</fullName>
            </value>
            <value>
                <fullName>Thursday</fullName>
            </value>
            <value>
                <fullName>Friday</fullName>
            </value>
            <value>
                <fullName>Saturday</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>