force-app/main/default/objects/Beat__c/fields/Beat_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Beat_Frequency__c</fullName>
    <description>DEPRECATED: Use Frequency__c instead. This field is kept for backward compatibility and is auto-synced from Frequency__c by the Beat trigger.</description>
    <label>Beat Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
                <default>true</default>
                <label>Weekly</label>
            </value>
            <value>
                <fullName>Bi-Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>