force-app/main/default/objects/Beat__c/fields/Pincode_Cluster__c.field-meta.xml
<CustomField>
    <fullName>Pincode_Cluster__c</fullName>
    <label>Pincode Cluster</label>
    <type>Text</type>
    <length>255</length>
</CustomField>