force-app/main/default/objects/Beat__c/fields/Total_Outlets__c.field-meta.xml
<CustomField>
    <fullName>Total_Outlets__c</fullName>
    <label>Total Outlets</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
</CustomField>