force-app/main/default/objects/Beat__c/validationRules/Day_Required_When_Active.validationRule-meta.xml
<ValidationRule>
    <fullName>Day_Required_When_Active</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Is_Active__c, ISBLANK(TEXT(Day_of_Week__c)))</errorConditionFormula>
    <errorMessage>Active beats must have at least one day of week assigned.</errorMessage>
</ValidationRule>